@@ -56,9 +56,7 @@ buildVignette <- function(file, dir = ".", latex = TRUE, tangle = TRUE, quiet = 
     vignette_is_tex <- get("vignette_is_tex", mode="function", envir=ns);
     find_vignette_product <- get("find_vignette_product", mode="function", envir=ns);
     vignetteEngine <- get("vignetteEngine", mode="function", envir=ns);
-    file_path_as_absolute <- tools::file_path_as_absolute;
 
-    texi2pdf <- tools::texi2pdf
     list.files <- function(..., no..=FALSE) {
       res <- base::list.files(...);
       if (no..) res <- setdiff(res, c(".", ".."));
